# brewblox-boilerplate

./: .env  Pipfile  README.md  azure-pipelines.yml  pyproject.toml  setup.py  tox.ini
brewblox_bt/: __main__.py
brewblox_ispindel/: __main__.py  ispindel_service.py
docker/: Dockerfile
docker/amd/: Dockerfile
docker/arm/: Dockerfile
test/: conftest.py  test_hello.py  test_http_example.py  test_ispindel.py  test_publish_example.py  test_subscribe_example.py
