[tool.poetry]
name = "brewblox-bt"
version = "0.1.0"
description = "ADD DESCRIPTION HERE"
authors = ["Noddy99 <noddy99@santa.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
brewblox-service = ">=0.34"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-flake8 = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-aiohttp = "*"
flake8 = "*"
autopep8 = "*"
aresponses = "*"
flake8-quotes = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
